A-CodeQuality: Fix issue #1